[project]
name = "style_aligned_comfy"
description = "Implementation of the [a/StyleAligned](https://style-aligned-gen.github.io/) paper for ComfyUI. This node allows you to apply a consistent style to all images in a batch; by default it will use the first image in the batch as the style reference, forcing all other images to be consistent with it."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/brianfitzgerald/style_aligned_comfy"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "style_aligned_comfy"
Icon = ""
